Upgrade to Java 25 with virtual threads and LLM-optimized output
Major improvements:
- Upgrade to Java 25+ requirement
- Upgrade Gson from 2.11.0 to 2.13.2 (latest)
- Replace fixed thread pool with virtual threads for better I/O concurrency
- Remove artificial paragraph breaks - continuous transcript optimized for LLM consumption
- Update README with new features and requirements

Technical changes:
- Use Executors.newVirtualThreadPerTaskExecutor() for efficient concurrent downloads
- Remove 500-character paragraph chunking in VTT conversion
- Continuous transcript format better suited for LLM analysis and research